--- a/templates/footer.htm
+++ b/templates/footer.htm
@@ -21,7 +21,7 @@
 <li><a href="/quicklist?cat=222"  >Sale Corals</a></li>
 <li><a href="/quicklist?cat=203"  >Invert on Sales</a></li>
 <li><a href="/quicklist?cat=223"  >Reef Packages on Sale</a></li>
-<li><a href="/quicklist?cat=197"  >Aquarium Supplies on Sale </a></li>
+<li><a href="/category?id=197"  >Aquarium Supplies on Sale </a></li>
 <li><a href="/pages?pageid=91">Specials</a></li>
 </ul>
 
@@ -30,10 +30,10 @@
 <ul class="footerlist">
   <span class="footertitle">SERCIVE</span>
 <li class="padtop24"><a href="/pages?pageid=45"  >Shipping</a></li>
-<li><a href="/pages?pageid=40"  >Contact Us</a></li>
+<li><a href="/contactus"  >Contact Us</a></li>
 <li><a href="/pages?pageid=39"  >Returns</a></li>
-<li><a href="/pages?pageid=43"  >Reef Rewards</a></li>
-<li><a href="/pages?pageid=2"  >Terms and Condition</a></li>
+<li><a href="/reefpackages"  >Reef Rewards</a></li>
+<li><a href="/termsconditions"  >Terms and Condition</a></li>
 <!--<li><a href="guaranteeinfo.htm">Guarantee Info</a></li>-->
 </ul>
 
