--- a/templates/taxmanager.htm
+++ b/templates/taxmanager.htm
@@ -155,7 +155,7 @@
 
 	 
 
-		<div class="order-txt3" style="float:left; width:106px;  padding-left:10px;   border-bottom:solid 1px #dedede;  height:50px; border-left:solid 1px #dedede;  border-right:solid 1px #dedede;" align="center"><input name="" type="checkbox" value="" /><br><input type=image src="misc/images/settings-save.jpg" width="94" height="25" border="0" /></form></div>
+		<div class="order-txt3" style="float:left; width:106px;  padding-left:10px;   border-bottom:solid 1px #dedede;  height:50px; border-left:solid 1px #dedede;  border-right:solid 1px #dedede;" align="center"><input name="delete" type="checkbox" value="" /><br><input type=image src="misc/images/settings-save.jpg" width="94" height="25" border="0" /></form></div>
 		</div>
  {% empty %}
 			<em class="formee-req">No Records</em>
