--- a/misc/style.css
+++ b/misc/style.css
@@ -13,6 +13,7 @@ border-bottom:none;
 -moz-box-shadow:0 0 8px rgba(0,0,0,0.3); 
 box-shadow:0 0 8px rgba(0,0,0,0.3);
 }
+.neleft{padding-left:230px;}
 
 .shade {
 	background-image: url(images/bg-shade.png);
@@ -658,6 +659,7 @@ padding-top:10px;}
 .wid157{width:157px}
 .wid780{width:780px}
 .wid1002{width:1002px}
+.wid140{width:140px}
 
 
 .bord2{
@@ -724,7 +726,7 @@ background-repeat:repeat-y
 .padtop28{padding-top:28px;}
 .padtop29{padding-top:29px;}
 .padtop30{padding-top:30px;}
-.padtop35{padding-top:30px;}
+.padtop35{padding-top:35px;}
 .padtop38{padding-top:38px;}
 .padtop81{padding-top:81px;}
 .padtop90{float:left; padding-left:90px; padding-top:10px;}
@@ -827,6 +829,7 @@ background-repeat:repeat-y
 .marright28{margin-right:28px;}
 .marright29{margin-right:29px;}
 .marright30{margin-right:30px;}
+.marright40{margin-right:40px;}
 
 .padleft1{padding-left:1px;}
 .padleft2{padding-left:2px;}
@@ -865,6 +868,8 @@ background-repeat:repeat-y
 .padleft120{padding-left:120px;}
 .padleft150{padding-left:150px;}
 .padleft100{padding-left:100px;}
+.padleft260{padding-left:260px;}
+.padleft220{padding-left:220px;}
 
 
 .marleft1{margin-left:1px;}
@@ -1173,9 +1178,25 @@ background-repeat:repeat-y
 	font-size: 12px;
 	line-height: normal;
 	font-weight: normal;
-	color: #ec5e00;
-	text-decoration: underline;
+	color: #245478;
+	text-decoration: none;
 	text-transform: none;
+}
+.more a:link {
+	color: #245478;
+	text-decoration: none;
+}
+.more a:visited {
+	color: #245478;
+	text-decoration: none;
+}
+.more a:hover {
+	color: #245478;
+	text-decoration: none;
+}
+.more a:active {
+	color: #245478;
+	text-decoration: none;
 }
 .text-box {
 	height: 24px;
@@ -1849,10 +1870,11 @@ margin:0px auto}
 	text-decoration: none;
 }
 .grey-left-one {
-	background-image: url(images/left-one.jpg);
-	background-repeat: repeat-x;
+	/*background-image: url(images/left-one.jpg);
+	background-repeat: repeat-x;*/
+	background-color: #EEF9FF;
 	background-position: left top;
-	height: 201px;
+	min-height: 201px;
 	width: auto;
 	border-right-width: 1px;
 	border-bottom-width: 1px;
@@ -3012,20 +3034,76 @@ color:#666666;
 	text-align:center
 }
 
+.cms-bg-1-new {
+	background-color: #fffc00;
+	height: 29px;
+	line-height:29px;
+	color:#666666;
+	font-family: "Open Sans Light";
+	font-size: 13px;
+	font-weight:bold;
+	border-left-width: thin;
+	border-left-style: solid;
+	border-left-color: #000000;
+	padding-left:0px;
+	width:35%;
+	float:left;
+	text-align:center
+}
+.cms-bg-2-new {
+	background-color: #fffc00;
+	height: 29px;
+	line-height:29px;
+	color:#666666;
+	font-family: "Open Sans Light";
+	font-size: 13px;
+	font-weight:bold;
+	border-left-width: thin;
+	border-left-style: solid;
+	border-left-color: #000000;
+	padding-left:0px;
+	width:35%;
+	float:left;
+	text-align:center
+}
+
+.cms-bg-4-new {
+	background-color: #fffc00;
+	height: 29px;
+	line-height:29px;
+	color:#666666;
+	font-family: "Open Sans Light";
+	font-size: 13px;
+	font-weight:bold;
+	border-left-width: thin;
+	border-left-style: solid;
+	border-left-color: #000000;
+	padding-left:0px;
+	width:211px;
+	float:left;
+	text-align:center
+}
+
 .cms{
 clear:both;
 background-color: #ffd2e0;
 color:#666666;
 font-weight:bold;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 12px;
 border-top-width: thin;
 border-top-style: solid;
 border-top-color: #000000;
 padding-left:0px;
 height:116px;
-
 }
+
+.cms-articles{
+border-bottom-width: thin;
+border-bottom-style: solid;
+border-bottom-color: #000000;
+}
+
 .pad8{
 padding-top:8px;}
 .pad15{
@@ -3078,8 +3156,10 @@ line-height:70px
 	text-align:center;
 	height:86px;
 	padding-top:30px
-	
-	}
+		}
+
+		
+		
 .rose2{width:47%; float:left; 	color:#666666;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
@@ -3091,8 +3171,23 @@ line-height:70px
 	text-align:center;
 		height:86px;
 		padding-top:30px
+	}
 	
-}
+	
+.rose2-new{width:35%; float:left; 	color:#666666;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	font-weight:bold;
+	border-left-width: thin;
+	border-left-style: solid;
+	border-left-color: #000000;
+	padding-left:0px;
+	text-align:center;
+		height:86px;
+		padding-top:30px
+	}
+	
+	
 .rose3{width:15%; float:left; 	color:#666666;
 		font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
@@ -3138,6 +3233,20 @@ line-height:70px
 	
 	}
 .blue2{width:47%; float:left; 	color:#666666;
+		font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	font-weight:bold;
+	border-left-width: thin;
+	border-left-style: solid;
+	border-left-color: #000000;
+	padding-left:0px;
+	text-align:center;
+		height:86px;
+		padding-top:30px
+	
+}
+
+.blue2-new{width:35%; float:left; 	color:#666666;
 		font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	font-weight:bold;
@@ -4059,6 +4168,7 @@ line-height:normal
 .wid303{ width:303px; }
 .wid150{ width:150px; }
 .wid200{ width:200px; }
+.wid210{ width:210px; }
 .wid270{ width:270px; }
 .wid662{ width:662px; }
 .wid393{ width:393px; }
@@ -4085,6 +4195,7 @@ line-height:normal
 .wid66{ width:66px; }
 .wid257{ width:257px; }
 .wid722{ width:722px; }
+.wid728{ width:728px; }
 .mar-less{ margin-left:-30px; }
 .lh{ line-height:18px; }
 .height-lh25{ line-height:25px; height:25px; }
@@ -4342,3 +4453,68 @@ line-height:normal
 
 .backcolor{background-color:#f7f7f7; clear:both}
 
+.guaran{
+	font-family: "Open Sans Semibold";
+	font-size: 14px;
+	line-height: normal;
+	font-weight: bold;
+	text-transform: capitalize;
+	color: #434343;
+	text-decoration: none;
+}
+
+.vie-details{
+	font-family: "PT Sans";
+	font-size: 12px;
+	line-height: normal;
+	font-weight: bold;
+	text-transform: capitalize;
+	color: #434343;
+	text-decoration: underline;
+}
+
+.vie-details a:link{
+	color: #434343;
+	text-decoration: underline;
+}
+.vie-details a:visited{
+	color: #434343;
+	text-decoration: underline;
+}
+
+.vie-details a:hover{
+	color: #434343;
+	text-decoration: underline;
+}
+
+.vie-details a:active{
+	color: #434343;
+	text-decoration: underline;
+}
+
+.content-account{
+	font-family: "PT Sans";
+	font-size: 13px;
+	line-height: normal;
+	font-weight: normal;
+	text-transform: capitalize;
+	color: #565656;
+	text-decoration: none;
+	float:left;
+	text-align:left;
+	padding-top:10px;
+}
+
+.content-label{
+	font-family: "PT Sans";
+	font-size: 12px;
+	line-height: normal;
+	font-weight: bold;
+	text-transform: capitalize;
+	color: #000000;
+	text-decoration: none;
+	text-align:right;
+	width:100px;
+	
+	
+}
