--- a/templates/ViewCart.html
+++ b/templates/ViewCart.html
@@ -10,6 +10,9 @@
 <div class="float-left wid748">
  
 <div class="toggle_left2 border">
+{% if error_message %}
+  <span class="redtext"><h4> {{error_message}}</h4></span>
+{% endif %}
 {% for item in MyCartItems %}
 <form name="form" method="GET" action="/cartaction">
 {% csrf_token %}
@@ -26,9 +29,9 @@
 </div>
 </div>
 <div class="clr card2_100 padtop10">
-<div class="float_left card2_alignC wid105"><img src="{{item.thumbnail}}" width=60 height=60/>&nbsp;</div>
-<div class="float_left card2_alignL padleft5 wid150">{{item.name|floatformat:2}}<br>{{item.extra_field_3}}</div>
-<div class="float_left orange_text card2_alignC pwid4"><span class="card2_strike">${{item.price|floatformat:2}}<br></span>{% if item.saleprice > 0 %} ${{ item.saleprice }} {% endif %}</div>
+<div class="float_left card2_alignC wid105"><img src="http://www.saltwaterfish.com/{{item.thumbnail}}" width=60 height=60/></div>
+<div class="float_left card2_alignL padleft5 wid150">{{item.name}}<br>{{item.extra_field_3}}</div>
+<div class="float_left orange_text card2_alignC pwid4"><span class="card2_strike">${{item.price|floatformat:2}}<br></span>{% if item.saleprice > 0 %} ${{ item.saleprice|floatformat:2 }} {% endif %}</div>
 <div class="float_left card2_alignC wid70"><input type="text" name="quantity" value="{{ item.quantity }}" size="1" /><br><input type="submit" name="cmdUpdate" value="Update"><br /><input type="submit" name="cmdDelete" value="Delete" onclick="javascript:return confirm('Are you sure you want to delete this item from your cart ?')"></div>
 <div class="float_left card2_alignC wid5">${{item.subtotal|floatformat:2}}</div>
 <div class="clr"></div>
@@ -36,12 +39,18 @@
 <div class="clr card2_hor_line"></div>
 
 <div class="clr card2_100 padtop10 padbottom10">
-<div class="float_left product_heading card2_58">Add $19.99 more to<br> qualify for free shiping!</div>
+
+<div class="float_left product_heading card2_58">{% if item.free_shipping_suggestion_val > 0 %}Add ${{item.free_shipping_suggestion_val|floatformat:2}} more to<br> qualify for free shiping!{% endif %}&nbsp;</div>
+
 <div class="float_left padtop10 card2_alignL">
 <table>
 <tr>
 	<td>Subtotal</td>
 	<td>${{item.subtotal|floatformat:2}}</td>
+</tr>
+<tr>
+   <td>Est.Shipping</td>
+   <td>${{item.shipping|floatformat:2}}</td>
 </tr>
 <tr>
 	<td>Fuel surcharge</td>
@@ -193,14 +202,17 @@ Cart is Empty
 <div class="clr padtop15 padbottom15" align="left"><img src="misc/images/paypal_icon1.jpg" /></div>
 <div class="wid270 pad-tb"><div class="button33">
 {% if not request.session.IsLogin %}
-<a href="/checkoutlogin"><font color="#FFFFFF"><strong>Secure Checkout</strong></font></a></div>
-{% elif request.session.IsLogin %}
-<a href="/orderconfirmation"><font color="#FFFFFF"><strong>Secure Checkout</strong></font></a></div>
-{% endif %}
+<a href="/checkoutlogin?gateway=AUTHORIZENET"><font color="#FFFFFF"><strong>Secure Checkout</strong></font></a></div>
 <div class="clr height1"></div></div>
-<div class="clr padtop5 padbottom10"><a href="/orderconfirmation?gateway=paypal"><img src="misc/images/paypal_icon3.jpg" width="240" /></a></div>
+<div class="clr padtop5 padbottom10" align="left"><a href="/checkoutlogin?gateway=paypal"><img src="https://www.paypalobjects.com/webstatic/mktg/merchant/pages/express-checkout/express-checkout-hero-sg.png" width="180" height="100px" /></a></div>
 </div>
-{% endif %}
+{% elif request.session.IsLogin %}
+<a href="/orderconfirmation?gateway=AUTHORIZENET"><font color="#FFFFFF"><strong>Secure Checkout</strong></font></a></div>
+<div class="clr height1"></div></div>
+<div class="clr padtop5 padbottom10" align="left"><a href="/orderconfirmation?gateway=paypal"><img src="https://www.paypalobjects.com/webstatic/mktg/merchant/pages/express-checkout/express-checkout-hero-sg.png" width="180" height="100px" /></a></div>
+</div>
+{% endif %} <!-- END IF to check Login -->
+{% endif %} <!-- END IF to check Empty Cart Items -->
 <div class="clr marleft20" >
 <div class="blue_text1  padtop5 padbottom10 padleft5">Login to View Any Store Credits</div>
 
@@ -211,17 +223,18 @@ would you like to apply it to this order?</div>
 <div class="clr padtop10" align="left"><a href="#"><img src="misc/images/cart2-apply1.jpg" width="137" height="21" /></a></div>
 </div>
 
+<form name="CouponForm" method="GET" action="/cartaction">
 <div class="clr">
 <div class="toggle_right_title padtop10 padbottom5" align="left"><font size="3"><strong>Discount Codes</strong></font></div>
 <div align="justify" class="wid240 padbottom5">Enter your coupon code if you have one.<br /></div>
-<input type="text" value="" size="30" />
-<div class="clr" align="left"><a href="#"><img src="misc/images/cart2-apply2.jpg" width="137" height="22" border="0" /></a></div>
+<input name="txtCoupon" type="text" value="" size="30" />
+<div class="clr" align="left"><input type="submit" name="cmdApplyCoupon" value="Apply Coupon"/></div>
 </div>
 <div class="padtop20 wid240" align="left"><font color="#FF6600"><strong><font size="3">Promotional Discounts:</font></strong><br />
 <U>Free Standard Shipping On $49! Exclusions Apply.?</U><br />
 You have not yet qualified for this promtion</font></div>
 </div>
-
+</form>
 
 </div>
 
