--- a/templates/categoryindex.htm
+++ b/templates/categoryindex.htm
@@ -3,8 +3,9 @@
 {% load tagsfilter %}
 <div class="float-left width10">&nbsp;&nbsp;</div>
 <div class="float-left wid748 padtop1">
-<div class="clr my_account_title padleft10 padtop10 padbottom13">Home > Category Index</div>
-<div class="clr myaccount_bg " style="height:100% !important;">
+<div class="clr my_account_link padbottom13">Home  <span> &gt; Category Index </span></div>
+ <div class="clr my_account_title padtop5 padbottom13">Category Index </div>
+ <div class="clr myaccount_bg " style="height:100% !important;">
 <div style="clear:both; width:700px; height:21px; line-height:21px; " >
  </div>
   <div class="clr padtop20 padleft20" align=left>
