--- a/templates/registration.htm
+++ b/templates/registration.htm
@@ -1,4 +1,18 @@
-{% include 'header.htm' %}
+{% extends 'base.html' %}
+{% block content %}
+<style>
+.content-label {
+    color: #000000;
+    font-family: "PT Sans";
+    font-size: 12px;
+    font-weight: bold;
+    line-height: normal;
+    text-align: right;
+    text-decoration: none;
+    text-transform: capitalize;
+    width: 100px;
+}
+</style>
 <script language="javascript" type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script language="javascript" type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.10.0/jquery.validate.min.js"></script>
 <script type="text/javascript">
@@ -47,117 +61,106 @@ FORM_MESSAGES = {
 	'{{ form.recaptcha.html_name }}': '*'
 };
  </script>
-<div  class="gray-back-new">
-<div class="width8 float-left">&nbsp;</div>
-<div class="width226 float-left">
-<div class="grey-left-one clr">
-    <div class="padtop81">GREY AREA 
-CMS Admin Control</div>
+ <div class="float-left width10">&nbsp;&nbsp;</div>
+<div class="float-left wid748 padtop5">
+<div class="clr my_account_link"></div>
+<div class="clr my_account_title padtop5 padbottom13">Registration Form</div>
+<div class="clr myaccount_bg">
+  <div class="clr padtop10">
+
+ 
+<div class="clr padtop18  myaccount_txt1 padleft20">Customer Information</div>
+<div class="form_top">
+{% if message or error_message %}
+      <p class="greentext">{{ message }} <span class="redtext">{{ error_message }}</span></p>
+      {% endif %}
+<form method="POST" action="/registeruser" name="regform" id="regform">
+{% csrf_token %} 
+<div class="clr">
+<div class="form_left1">
+<div class="clear padtop20">
+<div class="float-left content-label martop5">Email Address:</div>
+<div class="float-left padleft7">{{ form.email }}</div>
 </div>
-<div class="height9 clr"></div>
-<div class="blue-border clr">
-<div class="blue-bg-header clr">
-My Account
+<div class="clear padtop20">
+<div class="float-left content-label martop5">First Name:</div>
+<div class="float-left padleft7">{{ form.first_name }}</div>
 </div>
-<form name="form" id="form" action="custlogin" method="post">
-{% csrf_token %}
-<div class="my-account clr">
-<div class="height23 clr">&nbsp;&nbsp;</div>
-<div class=" " >{{ loginform.username }}</div>
-<div class="height12 clr">&nbsp;&nbsp;</div>
-<div class=" " >{{ loginform.password }}</div>
-<div class="height12 clr">&nbsp;&nbsp;</div>
-<div class="wid187 clr">
-<div class="float-left"><input type=image src="misc/images/sign-in.jpg" width="77" height="21" border="0" /></div>
-<div class="new-customer float-right"><a href="/login#forget" class="start">Forgot Password</a></div>
-</form>
+<div class="clear padtop20">
+<div class="float-left content-label martop5">Company:</div>
+<div class="float-left padleft7">{{ form.company }}</div>
 </div>
-<div class="height12 clr">&nbsp;&nbsp;</div>
-<div class="wid157 clr">
-<div class="new-customer float-left">New Customer? </div>
-<div class="start float-right"><a href="/registration" class="start">Start Here</a></div>
-
+<div class="clear padtop20">
+<div class="float-left content-label martop5">Address 1:</div>
+<div class="float-left padleft7">{{ form.address1 }}</div>
 </div>
+<div class="clear padtop20">
+<div class="float-left content-label martop5">Address 2:</div>
+<div class="float-left padleft7">{{ form.address2 }}</div>
 </div>
-
-
+<div class="clear padtop20">
+<div class="float-left content-label martop5">City:</div>
+<div class="float-left padleft7">{{ form.city }}</div>
 </div>
-<div class="height9 clr">&nbsp;&nbsp;</div>
-<div class="blue-border clr">
-<div class="blue-bg-header clr">
-Resources
+<div class="clear padtop20">
+<div class="float-left content-label martop5">Zip:</div>
+<div class="float-left padleft7">{{ form.zip }}</div>
 </div>
-<div class="resources clr">
-<div class="height12 clr">&nbsp;&nbsp;</div>
-<div class="wid207 clr">
-  <select name="websites2" id="websites2" class="wid180">
-    <option name="one" value="msDropDown" selected="selected">Popular Searches</option>
-    <option  name="two" value="PrototypeCombobox">Aquacultured</option>
-    <option value="jQuery Tabs">Care Level Easy</option>
-    <option value="Common Accordion">Invert Safe</option>
-    <option value="jQuery Tabs">Light Level Low to Medium</option>
-    <option value="Common Accordion">On Sale</option>
-    <option value="Common Accordion">Reef</option>
-  </select>
+<div class="clear padtop20">
+<div class="float-left content-label martop5">Captcha:</div>
+<div class="float-left padleft7"><img src="{{ recaptcha }}" /></div>
 </div>
-<div class="wid187 clr padtop20">
-<div class="float-left padtop3"><img src="misc/images/arrow.jpg" width="15" height="12" border="0" /></div>
-<div class="float-left"><a href="http://www.saltwaterfish.com/search.asp?keyword=OnSale&amp;search.x=0&amp;search.y=0" target="_blank">Deep Blue Seas Foundation</a></div>
-</div>
-<div class="wid187 clr padtop10">
-<div class="float-left padtop3"><img src="misc/images/arrow.jpg" width="15" height="12" border="0" /></div>
-<div class="float-left"><a href="http://www.saltwaterfish.com/Returns-Guarantee_ep_78-1.html" target="_blank">Returns & Guarantee</a></div>
-</div>
-<div class="wid187 clr padtop10">
-<div class="float-left padtop3"><img src="misc/images/arrow.jpg" width="15" height="12" border="0" /></div>
-<div class="float-left"><a href="http://www.saltwaterfish.com/Gift-Certificate_p_11.html" target="_blank">Gift Certificates</a></div>
-
-
-</div><div class="wid187 clr padtop10">
-<div class="float-left padtop3"><img src="misc/images/arrow.jpg" width="15" height="12" border="0" /></div>
-<div class="float-left"><a href="http://www.saltwaterfish.com/Sustainability-Mandate_ep_55-1.html" target="_blank">Sustainability Mandate</a></div>
-
-
-</div><div class="wid187 clr padtop10">
-<div class="float-left padtop3"><img src="misc/images/arrow.jpg" width="15" height="12" border="0" /></div>
-<div class="float-left"><a href="http://www.saltwaterfish.com/Shipping_ep_77-1.html" target="_blank">Shipping</a></div>
-
-
-</div><div class="wid187 clr padtop10">
-<div class="float-left padtop3"><img src="misc/images/arrow.jpg" width="15" height="12" border="0" /></div>
-<div class="float-left"><a href="http://www.saltwaterfish.com/Free-Shipping-in-FLORIDA_ep_72-1.html" target="_blank">Free Shipping in FLORIDA</a></div>
-
-
-</div><div class="wid187 clr padtop10">
-<div class="float-left padtop3"><img src="misc/images/arrow.jpg" width="15" height="12" border="0" /></div>
-<div class="float-left"><a href="http://www.saltwaterfish.com/Reef-Rewards_ep_43-1.html" target="_blank">Reef Rewards</a></div>
-
-
-</div><div class="wid187 clr padtop10">
-<div class="float-left padtop3"><img src="misc/images/arrow.jpg" width="15" height="12" border="0" /></div>
-<div class="float-left"><a href="http://www.saltwaterfish.com/Acclimation_ep_48-1.html" target="_blank">Acclimation</a></div>
-
-
-</div><div class="wid187 clr padtop10">
-<div class="float-left padtop3"><img src="misc/images/arrow.jpg" width="15" height="12" border="0" /></div>
-<div class="float-left"><a href="http://forums.saltwaterfish.com/" target="_blank">Message Board</a></div>
-
-
-</div><div class="wid187 clr padtop10">
-<div class="float-left padtop3"><img src="misc/images/arrow.jpg" width="15" height="12" border="0" /></div>
-<div class="float-left"><a href="saltwater.htm" target="_blank">SaltWater Fish School </a></div>
-
-
-
-</div>
-
 </div>
 
 
+<div class="form_left1">
+<div class="clear padtop20">
+<div class="float-left content-label martop5">Password:</div>
+<div class="float-left padleft7">{{ form.password }}</div>
+</div>
+<div class="clear padtop20">
+<div class="float-left content-label martop5">Last Name:</div>
+<div class="float-left padleft7">{{ form.last_name }}</div>
+</div>
+<div class="clear padtop20">
+<div class="float-left content-label martop5">Tax id:</div>
+<div class="float-left padleft7">{{ form.account_no }}</div>
+</div>
+<div class="clear padtop20">
+<div class="float-left content-label martop5">Phone:</div>
+<div class="float-left padleft7">{{ form.phone }}</div>
+</div>
+<div class="clear padtop20">
+<div class="float-left content-label martop5">Comments:</div>
+<div class="float-left padleft7">{{ form.comments }}</div>
+</div>
+<div class="clear padtop20">
+<div class="float-left content-label martop5">Country:</div>
+<div class="float-left padleft7">{{ form.country }}</div>
+</div>
+<div class="clear padtop20">
+<div class="float-left content-label martop5">State:</div>
+<div class="float-left padleft7">{{ form.state }}</div>
+</div>
+<div class="clear padtop20">
+<div class="float-left content-label martop5"></div>
+<div class="float-left padleft7">{{ form.recaptcha }}</div>
+</div>
+</div>
+</div>
+<div class="clr padtop20"><input type=image src="misc/images/submit.jpg" width="76" height="25" border="0"  name="btnSubmit"  /></form></div>
+</div>
+</div>
+</div>
+<div class="clr">&nbsp;</div>
 </div>
 
 
-</div>
+
+
+
+</div></div>
+{% comment %}
 <div class="width10 float-left">&nbsp;&nbsp;</div>
 <div class="wid748 float-left">
 <div class="height12 clr"></div>
@@ -227,6 +230,7 @@ Registration Form
   <tr bgcolor="#FFFFFF"><td colspan="2"><input type="submit" name="btnSubmit" /></td></tr>
 </table>       
 </form>
-</div></div></div></div>
- 
-{% include 'footer.htm' %}
+
+</div></div></div> 
+ {%endcomment%}
+{% endblock content %}
